--- a/assets/scss/pages/_result.scss
+++ b/assets/scss/pages/_result.scss
@@ -501,20 +501,252 @@
             a {
                 display: block;
                 text-align: center;
-                padding:60px 0;
+                padding:30px 0 0;
                 img {
-                    width: 150px;
+                    width: 200px;
                 }
+            }
+        }
+
+        &.form {
+            padding-bottom: 40px;
+            h2 {
+                padding-left: 10px;
+            }
+            margin-bottom: 0;
+            letter-spacing: -0.03em;
+            .book_order_list {      
+                border-top-color: #999;          
+                b {
+                    display: inline-flex;
+                    align-items: center;
+                    min-width:139px;
+                    height: 69px;
+                    padding: 0 0 0 30px;
+                    color:#333;                    
+                    border-left: 1px solid #999;
+                    border-right: 1px solid #999;
+                    background-color: #F4F5F7;
+                    &:first-child {
+                        border-left: 0 solid #000;
+                    }
+                }
+                li {                                        
+                    align-items: center;
+                    > div {
+                        padding:0 30px;
+                        height: 69px;
+                        strong {
+                            font-size: 22px;
+                        }
+                    }
+                }
+                &.half {
+                    ul {
+                        display: flex;
+                        flex-wrap: wrap;
+                    }                    
+                    li {
+                        width: 50%;
+                        border-bottom-color:#999;
+                        &:nth-child(even) {
+                            b {
+                                border-left: 1px solid #999;
+                            }
+                        }
+                        
+                    }
+                }
+            }
+
+            .chart_wrap {
+                padding:0 30px;
+                display: flex;
+                justify-content: space-between;
+                .radar_chart {
+                    padding:0 ;
+                    margin-top: 0;
+                    width: 400px;
+                }
+                .bar_chart {
+                    margin-top: 0;
+                    width: 450px;
+                    height: 400px;
+                }
+            }
+            
+            .assessment_tbl {
+                margin: 80px 0 0;
+                table {
+                    font-size: 20px;
+                    th,
+                    td {
+                        padding:15px 0;
+                    }
+                    tfoot {
+                        td {
+                            color:#666;
+                        }
+                    }
+                }            
+            }
+            .assessment_list {
+                padding-top: 20px;
+                h3 {
+                    font-size: 20px;                    
+                    padding-left: 20px;
+                    margin:30px 0 12px;
+                    &::before {
+                        content: '∙';
+                        font-size: 30px;
+                        left: 8px;
+                        top:-10px;
+                    }
+                }
+                p {
+                    border: 1px solid #666;
+                    margin:0;
+                    padding:25px 30px;
+                    background-color:#fff;
+                    font-size: 18px;
+                    line-height: 1.6;
+                    color:#333;
+                }
+            }
+
+            .item_evaluation {
+                margin:16px 0 0;
+                th {
+                    padding:10px 0;
+                    font-size: 18px;
+                    font-weight: 400;
+                    background-color: #F4F5F7;
+                    color:#000;
+                    border-top: 1px solid #999;
+                    border-bottom: 1px solid #999;
+                    border-left: 1px solid #999;
+                }
+                td {
+                    font-size: 18px;
+                    color:#000;
+                    &.judgment {
+                        font-size: 24px;
+                        line-height: 1;
+                    }
+                }
+                tbody {
+                    td {
+                        vertical-align: top;
+                        background-color: #fff;
+                        padding:10px 0;
+                        border-left: 1px solid #999;
+                        border-bottom: 1px solid #999;
+                        &:first-child {
+                            border-left: 0 solid #000;
+                        }
+                        &:nth-child(even) {
+                            background-color: #F4F5F7;
+                        }                        
+                        &.commentary {
+                            background-color: #fff;
+                            text-align: left;
+                            padding:10px 15px;
+                            font-size: 18px;
+                            color:#000;
+                            .t2 {
+                                margin-top: 10px;
+                                color:#333;
+                                line-height: 1.4;
+                            }
+                        }
+                    }
+                }
+            }
+
+            .description_wrap {
+                display:block;
+                padding-top:0;
+                .description_txt {
+                    font-size: 18px;
+                    color:#333;
+                    padding-left: 10px;
+                    &::before {                        
+                        font-size: 30px;
+                        top:0;
+                        line-height: 20px;
+                    }
+                }
+            }
+            .percentile_info {
+                margin-top: 20px;
+                th,
+                td {
+                    padding:10px 0;
+                    color:#666;
+                    font-size: 21px;
+                }
+                th {
+                    padding:5px 0;
+                    font-weight: 500;
+                    background-color: #F6F1FF;
+                }
+            }
+            .description_list {
+                margin:30px 0 0;
+                background-color: #F4F5F7;
+                padding:40px;
+                li {
+                    display: flex;
+                    align-items: center;
+                    & + li {
+                        margin-top: 13px;
+                    }
+                    div {
+                        flex: 1;
+                    }
+                }
+                b {
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                    text-align: center;
+                    width: 140px;
+                    height: 80px;
+                    font-size: 20px;
+                    font-weight: 500;
+                    color:#333;
+                    border-radius: 10px;
+                    border: 2px solid #c4c4c4;
+                    background-color: #fff;
+                    margin-right: 20px;
+                    line-height: 1.2;
+                    
+                }
+                p {
+                    font-size: 18px;
+                    color:#333;
+                    line-height: 1.4;
+                    padding-left: 10px;
+                    position: relative;
+                    & + p {
+                        margin-top: 5px;
+                    }
+                    &::before {
+                        content: '-';
+                        position: absolute;
+                        left: 0;
+                    }
+                }                
             }
         }
     }
 
     .form_tit {
 
-        width: 395px;
+        width: max-content;
         margin:60px auto;
-        padding:10px 0;
-        border: 1px solid #555;
+        padding:10px 5px;
+        border: 2px solid #c4c4c4;
         border-left: 0 solid #000;
         border-right: 0 solid #000;
         font-size: 30px;
